[package]
name = "tmpwdav-1-q0047082"
version = "0.0.1"
edition = "2021"
description = "Temporary (non-persistent) WebDAV server"
license = "MIT"
repository = "https://github.com/scale-rs/tmpwdav-1-q0047082.deta.app"
homepage = "https://tmpwdav-1-q0047082.deta.app"

[dependencies]
dav-server = { version = "0.5.3", features = ["warp-compat"] }
env_logger = "0.10.0"
tokio = { version = "1.26.0", features = ["full"] }
warp = "0.3.3"
