[package]
name = "tmpwdav-1-q0047082"
version = "0.0.1"
edition = "2021"
description = "Temporary (non-persistent) WebDAV server"
license = "MIT"
repository = "https://github.com/scale-rs/tmpwdav-1-q0047082.deta.app"
homepage = "https://tmpwdav-1-q0047082.deta.app"

[features]
mockable = []
mock_fs = ["mockable", "dep:mockall", "dep:mockall_double"]
mock_entry = ["mockable", "dep:mockall"]


[dependencies]
askama = "0.12.0"
const_format = "0.2.31"
dav-server = { version = "0.5.3", features = ["warp-compat"] }
env_logger = "0.10.0"
tokio = { version = "1.26.0", features = ["full"] }
warp = "0.3.3"
http = "0.2.5"
mockall = { version = "0.11.4", optional = true }
mockall_double = { version = "0.3.0", optional = true }

[dev-dependencies]
test-binary = "3.0.1"
#[[test.fs_mock_entry_mock.dependencies]]
#name = "fs_mock_entry_mock"
#dependencies.tmpwdav-1-q0047082 = {features = ["fs_mock", "entry_mock"]}
#dependencies.askama = "0.12.0"
