[package]
name = "fs_mock_entry_mock"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wdav-hash-rs = { path = "../.." , features = ["mock_entry", "mock_fs"] }

# Empty [workspace] section as per https://gitlab.com/rust-test-binary/test-binary/#note
[workspace]

